[project]
name = "executive-secretary"
version = "0.1.0"
description = "Autonomous executive personal secretary over WhatsApp"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
  "fastapi>=0.115.0",
  "uvicorn>=0.30.0",
  "pydantic>=2.8.0",
  "playwright>=1.48.0"
]

[tool.pytest.ini_options]
pythonpath = ["."]
